--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/weather-tracker
-spring.datasource.username=ilya
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
+spring.datasource.username=omegalul
 spring.datasource.password=newpassword
 spring.jpa.generate-ddl=true
 jwt.header=Authorization
