add Dockerfile and docker-compose.yml

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
 spring.datasource.username=omegalul
 spring.datasource.password=newpassword
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jwt.header=Authorization
 jwt.secret=mySecret
 jwt.expiration=604800
